--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,12 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
    
-    <title>React App</title>
+    <title>GifExpertApp</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
